--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="info">
   <table style="width:100%">
     <tr>
-      <td><a href='HW1/HW1-Dyanmic Drive.html'><img src="gifs/hw1.gif"width="300" height="250"></a></td>
+      <td><a href='HW1/hw1.html'><img src="gifs/hw1.gif"width="300" height="250"></a></td>
       <td><a href='hw2.html'><img src="gifs/hw2.gif"width="300" height="250"></a></td>
       <td><a href='hw2p.html'><img src="gifs/hw2p.gif"width="300" height="250"></a></td>
 	  <td><a href='hw3.html'><img src="gifs/hw3.gif"width="300" height="250""></a></td>
