--- a/index.html
+++ b/index.html
@@ -3,32 +3,25 @@
 <html>
 
 <head>
-<style>
-</style>
+<title>GP-2016</title>
 </head>
 
 
 <body>
 <div id="info">
-  <table style="width:100%">
-    <tr>
-      <td><a href='HW1/hw1.html'><img src="gifs/hw1.gif"width="300" height="250"></a></td>
-      <td><a href='hw2.html'><img src="gifs/hw2.gif"width="300" height="250"></a></td>
-      <td><a href='hw2p.html'><img src="gifs/hw2p.gif"width="300" height="250"></a></td>
-	  <td><a href='hw3.html'><img src="gifs/hw3.gif"width="300" height="250""></a></td>
-    </tr>
+  <a href='HW0/hw0.html'><img src="gifs/hw0.gif"width="350" height="250"></a>
+  <a href='HW1/hw1.html'><img src="gifs/hw1.gif"width="350" height="250"></a>
+  <a href='hw2.html'><img src="gifs/hw2.gif"width="350" height="250"></a>
+  <a href='hw2p.html'><img src="gifs/hw2p.gif"width="350" height="250"></a>
+  <a href='hw3.html'><img src="gifs/hw3.gif"width="350" height="250""></a>
+    
 <!--
-    <tr>
-      <td><a href='hw4.html'><img src="gifs/hw4.gif"width="300" height="230"></a></td>
-      <td><a href='hw5.html'><img src="gifs/hw5.gif"width="300" height="250"></a></td>
-	  <td><a href='hw6.html'><img src="gifs/hw6.gif"width="300" height="250"></a></td>
-      <td><a href='hw7.html'><img src="gifs/hw7.gif"width="300" height="250"></a></td>
-    </tr>
-    <tr>
-      <td><a href='hw8.html'><img src="gifs/hw8.gif"width="300" height="230"></a></td>
-    </tr>
+  <a href='hw4.html'><img src="gifs/hw4.gif"width="350" height="230"></a>
+  <a href='hw5.html'><img src="gifs/hw5.gif"width="350" height="250"></a>
+  <a href='hw6.html'><img src="gifs/hw6.gif"width="350" height="250"></a>
+
 -->
-  </table>
+  
 </div>
 </body>
 </html>
