--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <div id="info">
   <a href='HW0/hw0.html'><img src="gifs/hw0.gif"width="350" height="250"></a>
   <a href='HW1/hw1.html'><img src="gifs/hw1.gif"width="350" height="250"></a>
-  <a href='hw2.html'><img src="gifs/hw2.gif"width="350" height="250"></a>
-  <a href='hw2p.html'><img src="gifs/hw2p.gif"width="350" height="250"></a>
-  <a href='hw3.html'><img src="gifs/hw3.gif"width="350" height="250""></a>
+  <a href='HW2/hw2.html'><img src="gifs/hw2.gif"width="350" height="250"></a>
+  <a href='HW3/hw3.html'><img src="gifs/hw3.gif"width="350" height="250"></a>
+  <a href='HW4/hw4.html'><img src="gifs/hw3.gif"width="350" height="250"></a>
     
 <!--
   <a href='hw4.html'><img src="gifs/hw4.gif"width="350" height="230"></a>
