--- a/HW2/hw2.html
+++ b/HW2/hw2.html
@@ -26,7 +26,7 @@ body {
   <a href='http://opengameart.org/content/large-forest-background'>*</a>
   <a href='http://hula-ula-art.blogspot.tw/2013/05/its-repeatable-forest-background.html'>*</a>
 </div>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r76/three.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r76/three.min.js"></script>
 <script src="https://jyunming-chen.github.io/tutsplus/js/KeyboardState.js"></script>
 <script type="text/javascript">
   document.oncontextmenu = function(){return false;}
