--- a/HW3/hw3.html
+++ b/HW3/hw3.html
@@ -31,6 +31,22 @@
   font-size: 18px;
   color: #ffffff;
 }
+
+#points{
+  position: absolute;
+  top: 5px;
+  right: 0;
+  width: 4%;
+  height: 5%;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 30px;
+  font-weight: bold;
+  text-shadow:3px 3px 3px #123456;
+  color: #ffff00;
+//  background: #789abc	;
+}
+
 #information{
   position: absolute;
   top: 40%;
@@ -107,6 +123,12 @@ body {
   <a href='http://www.kadrmasconcepts.com/blog/2011/05/20/sprite-sheets-return-of-the-animated-gif/'>b</a>
 </div>
 
+<div id='points'>
+  0
+</div>
+<div id='timer'>
+  1:00
+</div>
 <div class='messageBack' id='standby'>
   <span id= "start">start</span>
 </div>
@@ -115,10 +137,6 @@ body {
   <div id='failed' style='display: none;'>failed</div>
   <span class='button' id="play">play again</span>
 </div>
-<div id='timer'>
-  1:00
-</div>
-
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r76/three.min.js"></script>
 <script src="https://jyunming-chen.github.io/tutsplus/js/KeyboardState.js"></script>
@@ -330,14 +348,14 @@ function catMove(){
   var gNormal = new THREE.Vector3(groundHNext - groundH, -0.1, 0).normalize();
   //重力
   force = new THREE.Vector3(0, -300, 0);
-  if (pos.y <= groundH + catY + 0.05) {    // if contact, add contact force
+  if (pos.y <= groundH + catY ){    // if contact, add contact force
     pos.y = groundH + catY;
     force.add(new THREE.Vector3(0, 300, 0));
     force.add(new THREE.Vector3(0, 300, 0).projectOnVector(gNormal));  //上坡減速 下坡加速
     vel.y *= -.1;  //反彈, < 1 : 衰減
   }
 
-  if (pos.y > window.innerHeight * 0.9 - catY) { // top limit
+  if (pos.y > window.innerHeight * 0.9 - catY){ // top limit
     pos.y = window.innerHeight * 0.9 - catY;
     vel.y *= -.1;  //反彈, < 1 : 衰減
   }  
@@ -373,6 +391,7 @@ function checkIntersect(){
       var ySub = Math.abs(cat.position.y - bird[i].position.y);
       if(ySub <= catY){
         source++;
+        $('#points').html(source);
         scene.remove(bird[i]);
         birdLeave--;
         bird.splice(i, 1);
