--- a/HW4/hw4.html
+++ b/HW4/hw4.html
@@ -50,7 +50,7 @@ body {
 var camera, scene, renderer, controls;
 var puck, agents = [], halfWidth = 3, bodyLen = 12, totalAgent = 7;
 var circle = [], totalBlock = 3, k = 2;
-var steering = true, neighborClose = 5, steerText;
+var steering = true, neighborClose = 5, groupText;
 var target = new THREE.Vector3();
 var clock = new THREE.Clock();
 var mouse = new THREE.Vector2();
@@ -58,8 +58,8 @@ var raycaster, pickables = [], planeLen = 400;
 
 $('.steer').click(function(){
   steering = !steering;
-  if(steering) scene.add(steerText);
-  else scene.remove(steerText);
+  if(steering) scene.add(groupText);
+  else scene.remove(groupText);
 });
 
 init();
@@ -89,14 +89,14 @@ function init() {
 
   var Text2D = THREE_Text.MeshText2D;
   var textAlign = THREE_Text.textAlign;
-  steerText = new Text2D("steering", {
+  groupText = new Text2D("group", {
     align: textAlign.center,
     font: '20px Courier',
     fillStyle: '#123456',
     antialias: true
   });
-  steerText.position.set(-planeLen / 3, 20, planeLen / 2);
-  scene.add(steerText);
+  groupText.position.set(-planeLen / 3, 20, planeLen / 2);
+  scene.add(groupText);
 
   raycaster = new THREE.Raycaster();
 
